# seshport

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
commands/claude/: seshport.md
commands/codex/: seshport.md
demo/: claude-session.jsonl  codex-session.jsonl
demo/grok-session/: chat_history.jsonl  summary.json
docs/: architecture.excalidraw  index.html
npm/: install.js  package.json  run.js
scripts/: release.sh
src/: main.rs
