[package]
name = "seshport"
version = "0.2.0"
edition = "2021"
authors = ["Harshil-Jani"]
description = "Port your session between coding agents — Claude Code, Codex, Grok Build — and just resume where you left off."
license = "MIT"
repository = "https://github.com/Harshil-Jani/seshport"
readme = "README.md"
keywords = ["claude-code", "codex", "session", "ai-agents", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
